--- a/dbl/Makefile
+++ b/dbl/Makefile
@@ -12,12 +12,20 @@ SRC_FILE := $(wildcard $(SRC_DIR)/*.c)
 OBJ_FILE := $(patsubst $(SRC_DIR)/%.c, $(OBJ_DIR)/%.o, $(SRC_FILE))
 BIN_FILE := $(BIN_DIR)/dbl
 
-.PHONY: all
+.PHONY: all mkdirs clean
 
-all: $(BIN_FILE)
+all: mkdirs $(BIN_FILE)
+
+mkdirs:
+	mkdir -p $(OBJ_DIR)
+	mkdir -p $(BIN_DIR)
 
 $(BIN_FILE): $(OBJ_FILE)
 	$(LD) $(OBJ_FILE) -o $(BIN_FILE)
 
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
 	$(CC) $(CC_FLAGS) $< -o $@
+
+clean:
+	rm -r $(OBJ_DIR)
+	rm -r $(BIN_DIR)
